# C-with-classes

1d3s/: 1d3s  1d3s.cpp  README.md  input.txt  input5.txt
1d3s/1d3s.dSYM/Contents/: Info.plist
1d3s/1d3s.dSYM/Contents/Resources/DWARF/: 1d3s
1d3s/1d3s.dSYM/Contents/Resources/Relocations/aarch64/: 1d3s.yml
Addressing Variables/: README.md
Almanac/: Almanac  Almanac.cpp
Almanac/Almanac.dSYM/Contents/Resources/DWARF/: Almanac
Almanac/Almanac.dSYM/Contents/Resources/Relocations/aarch64/: Almanac.yml
BeadedBag/: beadedbag  beadedbag.cpp  beadedbag.h  item.cpp  item.h
BeadedBag-skel-macOS/: item.cpp
BeadedBag/beadedbag.dSYM/Contents/Resources/DWARF/: beadedbag
BearING/: BearING.cpp  README.md  helpers.cpp
Dappreciation/: dappreciation  dappreciation.cpp
Dappreciation/dappreciation.dSYM/Contents/Resources/DWARF/: dappreciation
FCCLab/: README.md  fcc  fcc.cpp
FCCLab/fcc.dSYM/Contents/Resources/DWARF/: fcc
Homework3/: CMakeLists.txt  main.cpp
Homework3/Google_tests/: CMakeLists.txt  Hash2D_tests.cpp  HashLP_tests.cpp
Homework3/HashFunc/: HashTable2D.h  HashTableLP.h
Ledgeon/: ledgeon  ledgeon.cpp
Ledgeon/ledgeon.dSYM/Contents/Resources/DWARF/: ledgeon
Metaverse/: golp.cpp  main.cpp  metaverse  metaverse.cpp
Metaverse/metaverse.dSYM/Contents/Resources/DWARF/: metaverse
Prolet/: Prolet.cpp
Roulette /: CMakeLists.txt  HardMode.cpp  HardMode.h  Player.cpp  Player.h  Wheel.cpp  Wheel.h  main.cpp
War/: CMakeLists.txt  Deck.cpp  Deck.h  SidePile.cpp  SidePile.h  main.cpp
Work/: Prolet.cpp  metadata.yml
(+5 files in other folders)
